--- a/templates/lists.html
+++ b/templates/lists.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Lists
+Lists
 {% endblock %}
 
 {% block main %}
@@ -9,27 +9,33 @@
     <div class="card-deck" style="margin-top: 5px;margin-bottom: 5px">
         <div class="card">
             <div class="card-body">
-                <h3>All my Movies:</h3>
+                <h5>All my Movies:</h5>
                 <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col" class="col-10"></th>
+                            <th scope="col" class="col-2"></th>
+                        </tr>
+                    </thead>
                     <tbody>
                         <tr>
-                            <td><a href="/drilldown/00">Movies:</a></td>
+                            <td><a href="/drilldown/00">Movies</a></td>
                             <td>{{ allmovies[0][0] }}</td>                            
                         </tr>
                         <tr>
-                            <td><a href="/drilldown/01">Watched:</a></td>
+                            <td><a href="/drilldown/01">Watched</a></td>
                             <td>{{ allmovies[0][1] }}</td>
                         </tr>
                         <tr>
-                            <td><a href="/drilldown/02">Watchlist:</a></td>
+                            <td><a href="/drilldown/02">Watchlist</a></td>
                             <td>{{ allmovies[0][2] }}</td>
                         </tr>
                         <tr>
-                            <td><a href="/drilldown/03">Rated:</a></td>
+                            <td><a href="/drilldown/03">Rated</a></td>
                             <td>{{ allmovies[0][3] }}</td>
                         </tr>
                         <tr>
-                            <td><a href="/drilldown/04">Best of:</a></td>
+                            <td><a href="/drilldown/04">Best of</a></td>
                             <td>{{ allmovies[0][4] }}</td>
                         </tr>
                     </tbody>
@@ -39,26 +45,32 @@
         <div class="card">
             <div class="card-body">
                 <table class="table">
-                    <h3>All Users:</h3>
+                    <h5>All Users:</h5>
+                    <thead>
+                        <tr>
+                            <th scope="col" class="col-10"></th>
+                            <th scope="col" class="col-2"></th>
+                        </tr>
+                    </thead>
                     <tbody>
                         <tr>
-                            <td><a href="/drilldown/10">Movies:</a></td>
+                            <td><a href="/drilldown/10">Movies</a></td>
                             <td>{{ allmovies[1][0] }}</td>
                         </tr>
                         <tr>
-                            <td><a href="/drilldown/11">Watched:</a></td>
+                            <td><a href="/drilldown/11">Watched</a></td>
                             <td>{{ allmovies[1][1] }}</td>
                         </tr>
                         <tr>
-                            <td><a href="/drilldown/12">Watchlist:</a></td>
+                            <td><a href="/drilldown/12">Watchlist</a></td>
                             <td>{{ allmovies[1][2] }}</td>
                         </tr>
                         <tr>
-                            <td><a href="/drilldown/13">Rated:</a></td>
+                            <td><a href="/drilldown/13">Rated</a></td>
                             <td>{{ allmovies[1][3] }}</td>
                         </tr>
                         <tr>
-                            <td><a href="/drilldown/14">Best of:</a></td>
+                            <td><a href="/drilldown/14">Best of</a></td>
                             <td>{{ allmovies[1][4] }}</td>
                         </tr>
                     </tbody>
@@ -71,11 +83,19 @@
         <div class="card">
             <div class="card-body">
                 <table class="table">
-                    <h3>Best of Me:</h3>
+                    <h5>Best of Me:</h5>
+                    <thead>
+                        <tr>
+                            <th scope="col" class="col-5"></th>
+                            <th scope="col" class="col-5"></th>
+                            <th scope="col" class="col-2"></th>
+                        </tr>
+                    </thead>
                     <tbody>
                         {% for i in range (4) %} 
                             <tr>
-                                <td><a href="/drilldown/0{{ (5+i) }}">{{ categories[i+1][1] }}:</a></td>
+                                <td><a href="/drilldown/0{{ (5+i) }}">{{ categories[i+1][1] }}</a></td>
+                                <td>maximum: {{ categories[i+1][2] }}</td>
                                 <td>{{ allmovies[0][i+5] }}</td>
                             </tr>
                         {% endfor %}
@@ -86,11 +106,17 @@
         <div class="card">
             <div class="card-body">
                 <table class="table">
-                    <h3>Best of All Users:</h3>
+                    <h5>Best of All Users:</h5>
+                    <thead>
+                        <tr>
+                            <th scope="col" class="col-10"></th>
+                            <th scope="col" class="col-2"></th>
+                        </tr>
+                    </thead>
                     <tbody>
                         {% for i in range (4) %} 
                             <tr>
-                                <td><a href="/drilldown/1{{ (5+i) }}">{{ categories[i+1][1] }}:</a></td>
+                                <td><a href="/drilldown/1{{ (5+i) }}">{{ categories[i+1][1] }}</a></td>
                                 <td>{{ allmovies[1][i+5] }}</td>
                             </tr>
                         {% endfor %}
