--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
 {% block main %}
     <form action="/register" method="post">
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" required>
+            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" style="text-transform: none" required>
         </div>
         <div class="form-group">
             <input class="form-control" name="password" id="password" placeholder="Password" type="password" required>
